# xtracted-crawlers

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
crawlers/: distributed_queue.py  job_by_id.py  job_producer.py  model.py  tasks.py
crawlers/amazon/: amazon_product.py
docker/: commands.md  docker-compose.yml
tests/: _2variants.json  conftest.py  docker-compose.yml  sample.json  test_amazon_async_product.py  test_amazon_product.py  test_model.py  test_storage.py  utilities.py
tests/ar_EG/: inifinix.html
tests/asins/: B00CL6353A.html  B00N2S94ZY.html  B01GFPWTI4.html  B0797JRLQC.html  B07Y6FH6XK.html  B08897N6HB.html  B08HMWZBXC.html  B094R672D3.html  B09Y58N791.html  B09YVBJH4S.html  B09ZDPP43X.html  B0B1J1GG9T.html  B0BXD1PRJQ.html  B0BZGPTLPG.html  B0C346GMKS.html  B0C9D4KL9D.html  B0CF5W257V.html  B0CHYV6312.html  B0CX9DVZDP.html  B0CZ3MV2GL.html  B0DD41VWT9.html
tests/de_DE/: gopro.html
tests/en_AU/: duracell.html
tests/en_GB/: gopro.html
tests/fr_FR/: gopro.html
tests/integration/: amazon_server.py  conftest.py  test_crawl_job_producer.py  test_crawl_job_worker.py  test_crawlers_services.py  test_death_trap_urls.py  test_default_crawl_syncer.py  test_job_producer.py  test_pg_crawl_job_syncer.py  test_pg_crawl_job_worker.py  test_queue.py
tests/ja_JP/: makita.html
tests/nl_BE/: almond_oil.html
tests/snapshots/: snap_test_amazon_product.py
tests/utils/: common.py
tests/variants/: 2variants.html
workers/: redis_worker.py
xtracted/: configuration.py  context.py  crawler_configuration.py  model.py  queue.py  storage.py  xtracted_logging.py
xtracted/crawlers/: crawl_job_producer.py  extractor_factory.py  job_producer.py  model.py
xtracted/crawlers/amazon/: amazon_async_product.py  amazon_params.py  amazon_product.py
xtracted/services/: crawlers_services.py
xtracted/utils/: redis_management.py
xtracted/workers/: crawl_job_worker.py  pg_crawl_job_worker.py  redis_worker.py
