[tool.poetry]
name = "crawlers-python"
version = "0.1.0"
description = "xtracted crawlers"
authors = ["nono <bruno.abitbol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["auth", "librabbitmq", "msgpack", "redis"], version = "^5.4.0"}
playwright = "^1.44.0"
pydantic = "^2.7.4"
redis = {extras = ["hiredis"], version = "^5.0.7"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pytest-playwright = "^0.5.0"
snapshottest = "^0.6.0"
debugpy = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    '.'
]

testpaths = [
    "tests",
]

[tool.poe.tasks]
startdev = "docker compose -f docker/docker-compose.yml up -d"
startcelery = "celery -A crawlers.tasks  worker --loglevel=INFO"
stopdev = "docker compose -f docker/docker-compose.yml down"

