[tool.poetry]
name = "crawlers-python"
version = "0.1.0"
description = "xtracted crawlers"
authors = ["nono <bruno.abitbol@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
redis = {extras = ["hiredis"], version = "^5.0.7"}
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pytest-playwright = "^0.5.0"
snapshottest = "^0.6.0"
debugpy = "^1.8.2"
pytest-asyncio = "^0.23.8"
pytest-docker = "^3.1.1"
pyright = "^1.1.377"
ruff = "^0.6.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ['.']
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poe.tasks]
startdev = "docker compose -f docker/docker-compose.yml up -d"
startcelery = "celery -A crawlers.tasks  worker --loglevel=INFO"
stopdev = "docker compose -f docker/docker-compose.yml down"


# ----
# mypy
# ----

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
implicit_reexport = true
disable_error_code = "type-arg"  # allow generic types without type arguments
disallow_untyped_defs = true 

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "asyncpg.*",
    "pydantic.*",
    "auth0.*",
    "openfga_sdk.*",
    "snapshottest.*"
]
ignore_missing_imports = true


# ----
# ruff
# ----

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

